--- a/development.ini
+++ b/development.ini
@@ -14,7 +14,14 @@ pyramid.default_locale_name = en
 pyramid.includes =
     pyramid_debugtoolbar
 
-sqlalchemy.url = sqlite:///%(here)s/pyramid-simple-acl.sqlite
+db.host = 192.168.66.142
+db.user = hotel
+db.name = hotel
+db.password = 123abc
+db.engine = mysql
+db.driver = pymysql
+
+sqlalchemy.url:%(db.engine)s+%(db.driver)s://%(db.user)s:%(db.password)s@%(db.host)s/%(db.name)s
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
@@ -26,7 +33,7 @@ sqlalchemy.url = sqlite:///%(here)s/pyramid-simple-acl.sqlite
 
 [server:main]
 use = egg:waitress#main
-listen = localhost:6543
+listen = 0.0.0.0:6543
 
 ###
 # logging configuration
